@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.3-1
-Date: 2020-12-23
+Version: 1.3-2
+Date: 2020-12-24
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Doug and Martin <Matrix-authors@R-project.org>
